syntax = "proto2";

package com.netty.protobuf;

option optimize_for = SPEED;
option java_package = "com.netty.protobuf.example";
option java_outer_classname = "StudentData";


message DataInfo{

    enum DataType{
        StudentType = 1;
        TeacherType = 2;
        SchoolType = 3;
    }

    required DataType data_type = 1;

    oneof DataBody{
        Student student = 2;
        Teacher teacher = 3;
        School school = 4;
    }


}

message Student{
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Teacher{
    optional string teacher_name = 1;
    optional string clazz = 2;
}

message School{
    optional string school_name = 1;
    optional string city = 2;
}

